--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://docs.google.com/document/d/1KSnA3IyFGZ8o9PURBRNiz4IO18gjEI1qtG1g8V7JohU/edit?usp=sharing" class="image fit"><img src="images/bird.png" alt="" /></a>
+										<a href="https://drive.google.com/file/d/12Q8W3hCd3e7ONT_ww6Esd1YPP89fQ69J/view?usp=sharing" class="image fit"><img src="images/bird.png" alt="" /></a>
 										<header>
-											<a href="https://docs.google.com/document/d/1KSnA3IyFGZ8o9PURBRNiz4IO18gjEI1qtG1g8V7JohU/edit?usp=sharing">Plant vs Birds</a>
+											<a href="https://drive.google.com/file/d/12Q8W3hCd3e7ONT_ww6Esd1YPP89fQ69J/view?usp=sharing">Plant vs Birds</a>
 											<p>Plant vs Bird is an AR (alternate reality) mobile game which I developed with students Sandra Larsson, Jessie Liu, and Oliver Kamruzzaman from October 2022 to January 2023. I was the main programmer; the game was made in the Unity game engine and programmed in C#.</p>
 										</header>
 									</article>
