--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>This is a selection of works from my time at university.</p>
+							<p>This is a selection of works from my time at university. Please, feel free to click the images as they are links which will take you to a video or web page of the project.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
