--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav id="nav">
 							<ul>
 								<!--<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>-->
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<!--<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>-->
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -137,7 +137,7 @@
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<!--<section id="about" class="three">
 						<div class="container">
 
 							<header>
@@ -146,15 +146,10 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I am currently taking the interactive media technology master's program at KTH. I would describe myself as a </p>
 
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Contact 
 					<section id="contact" class="four">
