--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/Oscar.png" alt="" /></span>
 							<h1 id="title">Oscar Nyman</h1>
 							<p>Student of media technology at KTH</p>
 						</div>
@@ -30,7 +30,7 @@
 							<ul>
 								<!--<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>-->
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<!--<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>-->
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -81,7 +81,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>This is a selection of works from my time at university. Please, feel free to click the images as they are links which will take you to a video or web page of the project.</p>
+							<p>This is a selection of works from my time at university.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -137,21 +137,21 @@
 					</section>
 
 				<!-- About Me -->
-					<!--<section id="about" class="three">
+					<section id="about" class="three">
 						<div class="container">
 
 							<header>
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<!--<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>-->
 
-							<p>I am currently taking the interactive media technology master's program at KTH. I would describe myself as a </p>
+							<p>I have interests in design, coding, and interactive media. I would describe myself as a creative person who likes problem solving and is motivated to learn and develop further. I am profficient in coding and have experience with interaction design, evaluation and project work. </p>
 
 						</div>
-					</section>-->
+					</section>
 
-				<!-- Contact 
+				<!-- Contact -->
 					<section id="contact" class="four">
 						<div class="container">
 
@@ -159,12 +159,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>oscarnym@kth.se</p>
 
-							<form method="post" action="#">
+							<!--<form action="mailto:oscarnym@kth.se">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -175,10 +172,10 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form>-->
 
 						</div>
-					</section>-->
+					</section>
 
 			</div>
 
